--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
     "angular-animate": "1.8.x",
     "angular-resource": "1.8.x",
     "angular-route": "1.8.x",
-    "bootstrap": "3.3.x",
-    "jquery": "3.3.x"
+    "bootstrap": "^3.4.1",
+    "jquery": "^3.7.0"
   },
   "devDependencies": {
     "angular-mocks": "1.8.x",
     "cpx": "^1.5.0",
-    "http-server": "^0.11.1",
-    "jasmine-core": "^3.5.0",
-    "karma": "^3.1.4",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-firefox-launcher": "^1.3.0",
-    "karma-jasmine": "^1.1.2",
-    "protractor": "^5.4.4"
+    "http-server": "^14.1.1",
+    "jasmine-core": "^5.0.1",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-firefox-launcher": "^2.1.2",
+    "karma-jasmine": "^5.1.0",
+    "protractor": "^7.0.0"
   },
   "scripts": {
     "postinstall": "npm run copy-libs",
