--- a/package.json
+++ b/package.json
@@ -16,21 +16,34 @@
   "devDependencies": {
     "angular-mocks": "1.8.x",
     "cpx": "^1.5.0",
+    "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "html-webpack-plugin": "^5.5.3",
     "http-server": "^14.1.1",
     "jasmine-core": "^5.0.1",
     "karma": "^6.4.2",
     "karma-chrome-launcher": "^3.2.0",
     "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "^5.1.0",
-    "protractor": "^7.0.0"
+    "mini-css-extract-plugin": "^2.7.6",
+    "protractor": "^7.0.0",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.88.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.9.0"
   },
   "scripts": {
     "postinstall": "npm run copy-libs",
     "update-deps": "npm update",
     "postupdate-deps": "npm run copy-libs",
-    "copy-libs": "cpx \"node_modules/{angular,angular-*,bootstrap/dist,jquery/dist}/**/*\" app/lib -C",
+    "copy-libs": "cpx \"node_modules/{angular,angular-*,bootstrap/dist,jquery/dist}/**/*\" public/lib -C",
+    "prebuild": "npm install",
+    "build": "webpack --bail --progress --profile",
+    "build:prod": "npm run build -- --mode production",
+    "build:dev": "npm run build -- --mode development",
     "prestart": "npm install",
-    "start": "http-server ./app -a localhost -p 8000 -c-1",
+    "start": "webpack serve --mode development --port 8000",
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
     "test-single-run": "npm test -- --single-run",
