--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "angular-mocks": "1.8.x",
+    "copy-webpack-plugin": "^11.0.0",
     "cpx": "^1.5.0",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
