--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "jasmine-core": "^5.0.1",
     "karma": "^6.4.2",
     "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
     "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "karma-webpack": "^5.0.0",
     "mini-css-extract-plugin": "^2.7.6",
     "protractor": "^7.0.0",
     "style-loader": "^3.3.3",
