--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mini-css-extract-plugin": "^2.7.6",
     "protractor": "^7.0.0",
     "style-loader": "^3.3.3",
+    "typescript": "^5.1.6",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
