--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "cpx": "^1.5.0",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
+    "fork-ts-checker-notifier-webpack-plugin": "^7.0.0",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
     "html-webpack-plugin": "^5.5.3",
     "http-server": "^14.1.1",
     "jasmine-core": "^5.0.1",
@@ -32,6 +34,7 @@
     "mini-css-extract-plugin": "^2.7.6",
     "protractor": "^7.0.0",
     "style-loader": "^3.3.3",
+    "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4",
