--- a/package.json
+++ b/package.json
@@ -14,6 +14,15 @@
     "jquery": "^3.7.0"
   },
   "devDependencies": {
+    "@types/angular": "^1.8.5",
+    "@types/angular-animate": "^1.5.11",
+    "@types/angular-aria": "^1.7.2",
+    "@types/angular-cookies": "^1.8.1",
+    "@types/angular-mocks": "^1.7.1",
+    "@types/angular-resource": "^1.5.17",
+    "@types/angular-route": "^1.7.3",
+    "@types/angular-sanitize": "^1.8.1",
+    "@types/jasmine": "^4.3.5",
     "angular-mocks": "1.8.x",
     "copy-webpack-plugin": "^11.0.0",
     "cpx": "^1.5.0",
